Fix spacing under prebody on articles

--- a/_docker/drupal/drupal-filesystem/web/themes/custom/rhdp/rhd-frontend/src/styles/_articles.scss
+++ b/_docker/drupal/drupal-filesystem/web/themes/custom/rhdp/rhd-frontend/src/styles/_articles.scss
@@ -7,7 +7,7 @@
   }
   .pre-body {
     margin-bottom: 30px;
-    @include desktop-small {
+    @media (min-width: 1025px) {
       margin-bottom: 0;
     }
   }
