--- a/_docker/drupal/drupal-filesystem/web/themes/custom/rhdp/rhd-frontend/styles/rhd.css
+++ b/_docker/drupal/drupal-filesystem/web/themes/custom/rhdp/rhd-frontend/styles/rhd.css
@@ -10651,7 +10651,7 @@ body.microsite-multi-page nav.top-bar, body.microsite nav.top-bar {
       line-height: 2.22rem; } }
   #rhd-article .pre-body {
     margin-bottom: 30px; }
-    @media (min-width: 1024px) {
+    @media (min-width: 1025px) {
       #rhd-article .pre-body {
         margin-bottom: 0; } }
   #rhd-article .article-hero {
